xLib6000 Change Log

v2.1.0

refactored the Api state machine, eliminated setConnectionState()
UdpManager.swift - commented out "ping" code in register(clientHandle:)

v2.0.6

WanServer.swift - changed hostName & hostPort to constants
WanServer.swift - reworked log messages and comments
Radio.swift - commented out code in defaultReplyHandler(_:seqNum:responseValue:reply:) until v2.4.9 bugs fixed
Radio.swift - refactored removeAll()
Panadapter.swift - added public var streamActive
Waterfall.swift - added public var streamActive
Radio.swift - added use of streamActive to vitaParser(_:)

v2.0.5

Radio.swift - corrections to defaultReplyHandler(_:seqNum:responseValue:reply:)
FlexErrors.swift - corrected text for .SL_I_CWX_NOTHING_TO_ERASE
Api.swift - in setConnectionState(_:) made disconnect dependent on _isGui

v2.0.4

RadioParameters.swift - refactored (simplification)
WanServer.swift - added a "FIXME:" in socketDidDisconnect(_:withError:)
Vita.swift - corrected an error in class parseDiscovery(_:) (payloadSize)


v2.0.3

Api.swift - reworked connect(_:clientName:isGui:primaryCmdTypes:secondaryCmdTypes:subscriptionCmdTypes:)
Api.swift - Eliminated "pausing" of RadioFactory
Api.swift - added sending of "client disconnect" command in setConnectionState(_:)
RadioFactory.swift - chaged udpSocket(_:didReceive:fromAddress:withFilterContext:) to update availableRadios when status changes
TcpManager, UdpManager, Vita, RadioParameters.swift - reworked Discovery token naming & usage

v2.0.2

RadioParameters.swift - added wanConnected property
Vita.swift - added parsing of wanConnected to class parseDiscovery(_:)
Radio.swift - in defaultReplyHandler(_:seqNum:responseValue:reply:) changed NSAlert to Application modal
Api.swift - added clientDisconnect to Command enum
RadioParameters.swift - added description() function

v2.0.1

AppExtensions.swift - in class makeObserver(_:with:of:object:) gave object default of nil